--- a/assets/style.css
+++ b/assets/style.css
@@ -118,6 +118,15 @@ button[disabled] {
   overflow: hidden;
 }
 
+#generate:hover {
+  background-color: #fff;
+  color: #AF0808;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #AF0808git ;
+}
+
+
 @media (max-width: 690px) {
   .btn {
     font-size: 1rem;
