--- a/assets/style.css
+++ b/assets/style.css
@@ -123,7 +123,7 @@ button[disabled] {
   color: #AF0808;
   border-style: solid;
   border-width: 1px;
-  border-color: #AF0808git ;
+  border-color: #AF0808;
 }
 
 
